--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -2551,107 +2551,107 @@ stories:
   domain: http://www.bethanyclipper.com/
   link: https://www.bethanyclipper.com/headlines/conservation-agent-volunteer-wrestle-with-huge-catfish/
 images:
-- name: cargo-ship-cargo-ship-on-sea-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-smoking-cigarette.jpg
-- name: downtheline-downtheline-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crabapple.jpg
-- name: berlinwall-DSC-0084-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-plentiful.jpg
-- name: cargo-ship-cargo-ship-on-sea-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-deep-connections.jpg
-- name: server-racks-clouds-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-blue-circuit.jpg
-- name: power-lines-power-lines-empty-space-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-atari-missle.jpg
-- name: white-house-whitehouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-crafty-painting.jpg
-- name: legal-statue-legalstatue-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-plentiful.jpg
-- name: file-00_00_07_91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00_00_07_91.jpg
-- name: store-on-corner-oldcabin-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-ww2-dresden.jpg
-- name: white-house-lawn-white-house-lawn-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-colorful-dream.jpg
-- name: sand-hand-sand-hand-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-kandinsky-bv.jpg
-- name: locked-up-steam-lock-up-steam-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-far-away.jpg
-- name: old-granary-field-oldhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-aqua.jpg
-- name: abandonedbuildings_satan_red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_satan_red.jpg
-- name: dragon-desert-desert-dragon-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-circuit-5.jpg
-- name: gypsymosaic-gypsy-eyes-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-far-away.jpg
-- name: mosaic-face-mosaic-face-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-atari-asteroids.jpg
-- name: locked-up-steam-lock-up-steam-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smoking-cigarette.jpg
-- name: containership-containership-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-copper-circuit.jpg
-- name: capital-battle-capitolbattle-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-umberto-bocc.jpg
-- name: copper-circuit-IMG_7559.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7559.jpg
-- name: oldhotel-oldhotel-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-clean-view.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-copper-circuit-2.jpg
-- name: status-berlin-status-berlin-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-copper-circuit.jpg
-- name: adam-smith-adam-smith-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kandinsky-bv.jpg
-- name: razorcliff-razorcliff-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-circuit.jpg
-- name: border-fence-border-fence-on-hill-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-emily-carr.jpg
-- name: powerlines-power-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-space-pizza.jpg
-- name: downtown-fredericksburg-atari-missle.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-atari-missle.JPG
-- name: fast-lights-freeway-redes-fast-flux-623x425-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-internet-numbers.jpg
-- name: dragon-desert-desert-dragon-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-smoking-cigarette.jpg
-- name: wind-mills-windmills-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-alien-goggles.jpg
-- name: oldbarn-oldbarn-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-ww2-dresden.jpg
-- name: stories-new-17-88-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-17-88-800-500-0-max-0--5--5.jpg
-- name: old-house-oldhouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-ww2-dresden.jpg
-- name: white-house-lawn-white-house-window-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-wols.jpg
-- name: legal-statue-legalstatue-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-atari-asteroids.jpg
-- name: catacombs-catacombs-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-jap-dys-1.jpg
-- name: adam-smith-adam-smith-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-really-hot.jpg
-- name: carry-load-carryload-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crunch-paper.jpg
-- name: old-school-house-old-schoolhouse-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-alien-goggles.jpg
-- name: old-granary-field-granaryfield-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-alberto-giacometti.jpg
-- name: rain-princess-IMG_8312.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8312.jpg
-- name: power-lines-power-lines-empty-space-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-crabapple.jpg
-- name: oldtrain-oldtrain-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-hot-spicy.jpg
-- name: docks-docks-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-purple-storm.jpg
-- name: curtain-curtain-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-yellow-collage.jpg
-- name: oldhouse-oldhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-gan-vogh.jpg
-- name: old-granary-field-granaryfield-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-colorful-blocks.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-really-hot.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-really-hot.JPG
+- name: pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
+- name: blossombar-space-pizza-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-space-pizza-file-00-00-00-00.jpg
+- name: aws-s3-treeinhills-yellowtree-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-treeinhills-yellowtree-still-1200.jpg
+- name: lincoln-memorial-lincolnmemorial-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-kandinsky-bv.jpg
+- name: white-house-whitehouse-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-graham-sutherland.jpg
+- name: border-fence-border-fence-on-hill-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-crunch-paper.jpg
+- name: eduardo-eduardo-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-diego-rivera1.jpg
+- name: subway-subway-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-neo-instinct.jpg
+- name: death-valley-death-valley-national-park-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-rain.jpg
+- name: castle-wall-DSC-0067-graham-sutherland.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-graham-sutherland.JPG
+- name: locked-up-steam-lock-up-steam-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-rain.jpg
+- name: abe-lincoln-one-wols-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-wols-file-00-00-00-00.jpg
+- name: mosaic-face-mosaic-face-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-brush.jpg
+- name: meadowbutterfly-meadow-butterfly-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-clean-view.jpg
+- name: locked-up-steam-lock-up-steam-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-marcel-duchamp.jpg
+- name: oldcabin-store-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-constitution.jpg
+- name: gypsy-wagon-gypsywagon-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-cinnamon-rolls.jpg
+- name: oldhotel-oldhotel-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-wols.jpg
+- name: nazi-invasion-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8494.jpg
+- name: fence-fence-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dali-two.jpg
+- name: stories-containership-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-blue-circuit.jpg
+- name: san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
+- name: art-museum-art-museum-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dali-two.jpg
+- name: wave-DSC_0291.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0291.jpg
+- name: birdhouse-birdhouse-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-graham-sutherland.jpg
+- name: adam-smith-adam-smith-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-colored-circuits.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-mucha-mult.jpg
+- name: old-door-lock-old-door-lock-2-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-kandinsky-bv.jpg
+- name: subway-subway-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-far-away.jpg
+- name: file-00-00-18-35.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-18-35.jpg
+- name: gypsymosaic-gypsy-eyes-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dry-skin.jpg
+- name: old-barn-old-barn-1500-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-gan-vogh.jpg
+- name: oldcabin-oldcabin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-atari-missle.jpg
+- name: birdhouse-birdhouse-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-electricity.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
+- name: ellis-island-ellis-island-room-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-marcel-duchamp.jpg
+- name: store-on-corner-oldcabin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purple-pond.jpg
+- name: mistywoods-babyfoot-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-rainbow-festival.jpg
+- name: copper-circuit-DSC_0035-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0035-2.jpg
+- name: paris-paris-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dali-three.jpg
+- name: udnie-DSC_0291.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0291.jpg
+- name: beach-clouds-lifeguard-beachclouds-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-cinnamon-rolls.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-oily-mcoilface.jpg
+- name: mosaic-face-mosaic-face-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dali-three.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
+- name: abe-lincoln-one-pablo-blue-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-00-00.jpg
+- name: old-door-lock-old-door-lock-2-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dali-three.jpg
+- name: nyc-flag-nycflag-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-matrix.jpg
+- name: catacombs-catacombs-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-constitution.jpg
+- name: mistywoods-babyfoot-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-bright-sand.jpg
+- name: old-door-lock-old-door-lock-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-umberto-bocc.jpg
 ---
 Big Rain And Big Wreck Leads To Haley's 1st Career Cup Win.&nbsp;Junior Competitions Heat Up.&nbsp;Zoo Vandals Let Bobcat, Raccoon Briefly Escape, Police Say.&nbsp;Is Government Truly Open?.&nbsp;Nantz Steps Down As Lady Pirates Coach.&nbsp;Still Worth The Price Of Admission?.&nbsp;Amash Slams Pelosi For Not Pursuing Impeachment.&nbsp;Chase Ends With Arrest Of Wanted Fugitive.&nbsp;
